changed files paths to work correctly

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="player">
         <audio class="sound">
-          <source src="/sounds/rain.mp3" type="audio/mp3" />
+          <source src="./sounds/rain.mp3" type="audio/mp3" />
         </audio>
         <img src="./svg/play.svg" alt="play" class="play" />
         <svg class="track-outline"
@@ -57,9 +57,9 @@
         <h3 class="time-display">3:00</h3>
       </div>
       <div class="sound">
-        <button data-sound="/sounds/rain.mp3" data-video="/video/rain.mp4"><img src="./svg/rain.svg" alt="rain"></button>
-        <button data-sound="/sounds/beach.mp3" data-video="video/beach.mp4"><img src="./svg/sun.svg" alt="beach"></button>
-        <button data-sound="/sounds/beach.mp3" data-video="video/forest.mp4"><img src="./svg/forest.svg" alt="forest"></button>
+        <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4"><img src="./svg/rain.svg" alt="rain"></button>
+        <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/sun.svg" alt="beach"></button>
+        <button data-sound="./sounds/beach.mp3" data-video="./video/forest.mp4"><img src="./svg/forest.svg" alt="forest"></button>
       </div>
     </div>
     <script src="app.js"></script>
